--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>TooLss Produtividade e Gestão</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <link href="/styles.css">
 </head>
 <body>
   <app-root></app-root>
